--- a/index.css
+++ b/index.css
@@ -1,19 +1,15 @@
-* {
-    box-sizing: border-box;
-    border-collapse: collapse;
-}
-
 #root {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    /* flex-direction: column; */
+    justify-content: space-evenly;
+    /* align-items: center; */
 }
 
-#main-container {
-    padding: 10px;
+#root-container {
+    padding: 0 0 10px 0;
     display: flex;
     flex-direction: column;
-    width: 500px;
+    width: 55rem;
     border: 1px solid black;
     justify-content: center;
     align-items: center;
@@ -31,7 +27,7 @@
     justify-content: center;
 }
 
-#page-data {
+#page-data-container {
     overflow: -moz-hidden-unscrollable;
     /* padding: 3px; */
     /* margin-bottom: 15px; */
@@ -48,14 +44,15 @@
     padding: 0 5px;
     border: 1px solid black;
     margin: 1px 3px;
+    background-color: antiquewhite;
 }
 
 .data {
     display: flex;
     /* flex-wrap: wrap; */
     width: inherit;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     flex-direction: column;
     padding: 10px 5px;
     border: 1px solid black;
@@ -64,4 +61,53 @@
 
 .hover {
     cursor: pointer;
+}
+
+#goto {
+    display: flex;
+    margin-top: 10px;
+    /* padding: 5px; */
+}
+
+button {
+    /* color: red; */
+    cursor: pointer;
+    margin: 0 3px;
+    background-color: aquamarine;
+}
+
+#invalid-msg {
+    display: none;
+    margin-top: 3px;
+}
+
+.hide {
+    display: none;
+}
+
+.highlight {
+    background-color: khaki;
+}
+
+h3 {
+    text-transform: capitalize;
+}
+
+.feed-sub {
+    cursor: pointer;
+    border: 1px solid black;
+    margin-top: -1px;
+    padding: 0.5rem;
+    font-size: 1.5rem;
+}
+
+.nav-btn {
+    display: flex;
+    flex-direction: column;
+    /* padding: 1rem; */
+}
+
+.btn {
+    padding: 0.3rem;
+    margin: 0.1rem;
 }
